<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_10sdp"
                android:id="@+id/tvUSer"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_search"
                android:hint="@string/search_your_note"
                android:padding="@dimen/_7sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/row_item_note" />

            <LinearLayout
                android:id="@+id/layoutMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/notes" />

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/create_note_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_16sdp"
        android:contentDescription="@string/add_note"
        android:src="@drawable/ic_add_note"
        android:tooltipText="@string/add_note" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>