<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            tools:context=".ui.register.RegisterActivity">

            <!--   <TextView
                   android:id="@+id/tvSkip"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_marginRight="@dimen/_15sdp"
                   android:text="@string/skip"
                   android:textAllCaps="true"
                   android:textSize="@dimen/_15sdp"
                   android:textStyle="bold" />-->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bungee_font"
                        android:text="@string/welcome_back"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_40sdp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/sign_in_to_continue"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/btnLogin"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/go"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        app:strokeColor="@color/black" />

                </LinearLayout>


            </ScrollView>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
